<resources>
    <!-- App properties -->
    <string name="app_name">Monospace</string>

    <!-- Date time -->
    <string name="dow_sun">S</string>
    <string name="dow_mon">M</string>
    <string name="dow_tue">T</string>
    <string name="dow_wed">W</string>
    <string name="dow_thu">T</string>
    <string name="dow_fri">F</string>
    <string name="dow_sat">S</string>

    <!-- App list -->
    <string name="app_list_search_prompt">Search:</string>
    <string name="toast_remove">Removed</string>
    <string name="toast_add">Added</string>
    <string name="toast_from_fav">from favorite</string>
    <string name="toast_to_fav">to favorite</string>

    <!-- Widgets -->
    <string name="widget_airpod_header">Airpod</string>
    <string name="widget_weather_header">Weather</string>
    <string name="widget_notif_header">Notifications</string>
    <string name="widget_media_header">Now Playing</string>
    <string name="widget_alarm_header">Next Alarm</string>
    <string name="widget_none_desc">None</string>
    <string name="widget_airpod_desc">Connected</string>
    <string name="widget_notif_clear">Clear</string>
    <string name="widget_notif_no_new">No new notification</string>
    <string name="widget_no_event">No event</string>
    <string name="widget_weather_current">Now</string>
    <string name="widget_weather_updating">Updating…</string>
    <string name="widget_weather_no_data">No Data</string>
    <string name="widget_media_unknown">Unknown</string>
    <string name="widget_search_hint">Search…</string>
    <string name="widget_search_web">Search online</string>
    <string name="widget_event_no_desc">No description</string>
    <string name="widget_event_no_location">No location</string>
    <string name="widget_event_in_thirty">Upcoming events in 30 days</string>
    <string name="widget_event_at">At</string>

    <string name="settings_header">Monospace Settings</string>
    <string name="settings_permission">Permission</string>
    <string name="settings_fine_location_header">Fine Location Access</string>
    <string name="settings_fine_location_desc">Use for determine the location for weather</string>
    <string name="settings_notification_header">Notification Access</string>
    <string name="settings_notification_desc">Use for displaying notification</string>
    <string name="settings_draw_over_apps_header">Draw over other apps</string>
    <string name="settings_draw_over_apps_desc">Use for displaying airpod dialog everywhere</string>
    <string name="settings_airpod_header">Airpod Information access</string>
    <string name="settings_airpod_desc">Use for displaying airpod information</string>
    <string name="settings_calendar_header">Calendar access</string>
    <string name="settings_calendar_desc">Use for reading upcoming events</string>
    <string name="settings_weather">Weather</string>
    <string name="settings_temp_unit">Temperature Unit</string>
    <string name="settings_temp_unit_c">°C</string>
    <string name="settings_temp_unit_f">°F</string>
    <string name="settings_current_location">Current Location</string>
    <string name="settings_locate">Locate</string>
    <string name="settings_web_search_provider">Web Search Provider</string>
    <string name="settings_permission_granted">Granted</string>
    <string name="settings_permission_allow">Allow</string>

    <string-array name="search_provider">
        <item>Google</item>
        <item>Bing</item>
        <item>DuckDuckGo</item>
        <item>Brave</item>
    </string-array>
</resources>