<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_black_blur"
    android:fitsSystemWindows="false"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/dow_sun"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="-2dp"
        android:gravity="center"
        android:text="@string/dow_sun"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/left_padding"
        app:layout_constraintTop_toBottomOf="@id/header_top" />

    <TextView
        android:id="@+id/dow_mon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/dow_mon"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/dow_sun"
        app:layout_constraintTop_toBottomOf="@id/header_top" />

    <TextView
        android:id="@+id/dow_tue"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/dow_tue"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/dow_mon"
        app:layout_constraintTop_toBottomOf="@id/header_top" />

    <TextView
        android:id="@+id/dow_wed"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/dow_wed"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/dow_tue"
        app:layout_constraintTop_toBottomOf="@id/header_top" />

    <TextView
        android:id="@+id/dow_thu"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/dow_thu"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/dow_wed"
        app:layout_constraintTop_toBottomOf="@id/header_top" />

    <TextView
        android:id="@+id/dow_fri"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/dow_fri"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/dow_thu"
        app:layout_constraintTop_toBottomOf="@id/header_top" />

    <TextView
        android:id="@+id/dow_sat"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/dow_sat"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/dow_fri"
        app:layout_constraintTop_toBottomOf="@id/header_top" />

    <TextView
        android:id="@+id/month_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:includeFontPadding="false"
        android:lineSpacingExtra="0dp"
        android:textColor="@color/white"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/left_padding"
        app:layout_constraintTop_toBottomOf="@id/dow_sun" />

    <TextView
        android:id="@+id/dom_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="monospace"
        android:includeFontPadding="false"
        android:lineSpacingExtra="0dp"
        android:textColor="@color/white"
        android:textSize="100sp"
        app:layout_constraintStart_toEndOf="@id/month_main"
        app:layout_constraintTop_toTopOf="@id/month_main" />

    <TextView
        android:id="@+id/time_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="monospace"
        android:includeFontPadding="false"
        android:lineSpacingExtra="0dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/left_padding"
        app:layout_constraintTop_toBottomOf="@id/month_main" />

    <TextView
        android:id="@+id/mer_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:includeFontPadding="false"
        android:lineSpacingExtra="0dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/time_main"
        app:layout_constraintStart_toEndOf="@id/time_main" />

    <LinearLayout
        android:id="@+id/status_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@drawable/status_bar"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="@id/time_main"
        app:layout_constraintStart_toEndOf="@id/mer_main"
        app:layout_constraintTop_toTopOf="@id/time_main">

        <RelativeLayout
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp">

            <ProgressBar
                android:id="@+id/battery_main"
                style="?android:progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="false"
                android:max="100"
                android:progress="70"
                android:progressDrawable="@drawable/battery_bar"
                android:rotation="-90" />

            <TextView
                android:id="@+id/battery_perc_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/mp_green"
                android:textSize="9sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/battery_charge_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:src="@drawable/charging"
                android:padding="7dp"
                android:visibility="gone"/>
        </RelativeLayout>

        <ImageView
            android:id="@+id/network_main"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="5dp"
            android:padding="5dp"
            android:src="@drawable/no_connection_gray" />

        <View
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/separator" />

        <ImageView
            android:id="@+id/bluetooth_main"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="5dp"
            android:padding="5dp"
            android:src="@drawable/bluetooth_disable_gray" />

        <View
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/separator" />

        <ImageView
            android:id="@+id/location_main"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="4dp"
            android:padding="5dp"
            android:src="@drawable/location_disable_gray" />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/drawer_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/app_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/app_page_indicator"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                app:tabGravity="center"
                app:tabMode="scrollable"
                app:tabIndicator="@android:color/transparent"
                app:tabBackground="@drawable/app_tab_selector"
                app:tabMaxWidth="12dp"
                app:tabMinWidth="12dp"
                app:tabIndicatorFullWidth="false"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@id/drawer"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_bar"
        android:orientation="vertical"
        android:clickable="false"
        android:focusableInTouchMode="false"
        android:focusable="false"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/header_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="219dp" />

</androidx.constraintlayout.widget.ConstraintLayout>